Fix image map alignment for atlantic page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1103,13 +1103,9 @@ tr.not_in_map { background-color: #FFDDDD; }
 
 /* atlantic.html */
 .atlantic_cruise .map {
-  width: 420px;
   position: relative;
   float: left;
   margin-right: 15px;
-}
-.atlantic_cruise .map img {
-  width: 100%;
 }
 .atlantic_cruise .table {
   margin-bottom: 1em;
